# gen-z4ikers

./: Michal full experiment.ipynb  eda.ipynb  eda_ost.ipynb  gen-z4ikers.ipynb  gen-z4ikers_old.ipynb  hack.ipynb  hackathon.py  main.py  preprocessing.ipynb  pyproject.toml  requirements.txt  siemanko  timeseries_approach.ipynb  zmienne.ipynb
Finale/: kmeans_and_regression.ipynb  ost.py
timeseries-zbior/: split_dataset.py
