[project]
name = "gen-z4ikers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.19.6",
    "geopandas<1.0",
    "geopy>=2.4.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pydeck>=0.9.1",
    "pyproj>=3.7.1",
    "scikit-learn>=1.6.1",
    "shapely>=2.1.1",
    "shapley>=1.0.2",
    "streamlit>=1.45.1",
    "streamlit-folium>=0.25.0",
]
